--- a/app/src/main/res/layout/track_list_item.xml
+++ b/app/src/main/res/layout/track_list_item.xml
@@ -7,7 +7,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout style="@style/TrackListItem">
-
 <!--        Фото трека-->
         <androidx.cardview.widget.CardView style="@style/TrackCoverContainer"
             android:layout_width="wrap_content"
@@ -26,8 +25,7 @@
 
             <TextView android:id="@+id/trackNameView" style="@style/TrackName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Smells Like Teen Spirit"/>
+                android:layout_height="wrap_content"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -35,8 +33,7 @@
 
                 <TextView android:id="@+id/trackArtistNameView" style="@style/TrackDetails"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nirvana"/>
+                    android:layout_height="wrap_content"/>
 
                 <Space
                     android:layout_width="5dp"
@@ -44,8 +41,7 @@
 
                 <TextView android:id="@+id/trackLengthView" style="@style/TrackDetails"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="3:45"/>
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
