--- a/app/src/main/res/layout/no_connection.xml
+++ b/app/src/main/res/layout/no_connection.xml
@@ -21,40 +21,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"/>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/fg_primary"
-                android:fontFamily="@font/ys_display_bold"
-                android:textSize="22sp"
-                android:textAlignment="center"
-                android:text="@string/noNetworkErrorHeader"
-                />
+                style="@style/ErrorTextView"
+                android:text="@string/noNetworkErrorHeader"/>
                 <Space
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"/>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/fg_primary"
-                android:fontFamily="@font/ys_display_bold"
-                android:textSize="22sp"
-                android:textAlignment="center"
-                android:text="@string/noNetworkErrorDescription"
-                />
+                style="@style/ErrorTextView"
+                android:text="@string/noNetworkErrorDescription"/>
                 <Space
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"/>
                 <Button
                     android:id="@+id/retrySearchButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/refresh"
-                    android:layout_gravity="center"
-                    android:backgroundTint="@color/fg_primary"
-                    android:textColor="@color/bg_primary"
-                    android:fontFamily="@font/ys_display_bold"
-                    android:paddingHorizontal="15dp"
-                    />
+                    style="@style/SmallRoundButton"/>
         </LinearLayout>
 
         <Space
