--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -146,4 +146,12 @@
         <item name="android:layout_gravity">center</item>
         <item name="srcCompat">@drawable/no_internet_dark</item>
     </style>
+    <style name="ErrorTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/fg_primary</item>
+        <item name="android:fontFamily">@font/ys_display_bold</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
